# cppexpose

./: .gitignore  .ignore  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile  LICENSE  README.md  cppexpose-config.cmake  type_system.txt
source/cppexpose/: CMakeLists.txt
source/cppexpose/include/cppexpose/: AbstractNumber.h  AbstractNumber.inl  AbstractSignal.h  AbstractSignal.hh  AbstractTyped.h  AbstractTyped.hh  AbstractTyped.inl  AbstractTypedNumber.h  AbstractTypedNumber.hh  AbstractTypedNumber.inl  AbstractVar.h  AbstractVar.hh  AbstractVar.inl  Array.h  Array.hh  Color.h  Connection.h  ConstMemberFunction.h  ConstMemberFunction.hh  Function.h  Function.hh  GetTyped.h  GetTyped.hh  JSON.h  JSON.hh  MemberFunction.h  MemberFunction.hh  MemberFunction.inl  Object.h  Object.hh  Object.inl  PropertyContainer.h  PropertyContainer.hh  ScopedConnection.h  ScopedConnection.hh  Signal.h  Signal.hh  Signal.inl  StaticFunction.h  StaticFunction.hh  (+57 more)
source/cppexpose/include/cppexpose/base/: JSONReader.h  Serializer.h  SerializerJSON.h  Tokenizer.h  function_helpers.h  string_helpers.h  string_helpers.hpp  string_helpers.inl  template_helpers.h
source/cppexpose/include/cppexpose/expose/: AbstractNumber.h  AbstractNumber.inl  AbstractProperty.h  AbstractTyped.h  AbstractTyped.inl  AbstractVar.h  AbstractVar.inl  Array.h  Array.inl  GetTyped.h  Object.h  Object.inl  Property.h  Property.inl  PropertyContainer.h  TypedArray.h  TypedArray.inl  TypedBool.h  TypedBool.inl  TypedEnum.h  TypedEnum.inl  TypedFloatingPoint.h  TypedFloatingPoint.inl  TypedGeneric.h  TypedGeneric.inl  TypedPointer.h  TypedPointer.inl  TypedSignedIntegral.h  TypedString.h  TypedString.inl  TypedUnsignedIntegral.h  TypedUnsignedIntegral.inl  ValueStorage.h  ValueStorage.inl  Var.h  Var.inl  Variant.h  Variant.inl
source/cppexpose/include/cppexpose/function/: AbstractFunction.h  ConstMemberFunction.h  ConstMemberFunction.inl  Function.h  Function.hpp  MemberFunction.h  MemberFunction.hpp  MemberFunction.inl  Method.h  Method.hpp  StaticFunction.h  (+2 more)
source/cppexpose/source/: AbstractFunction.cpp  AbstractSignal.cpp  AbstractVar.cpp  Array.cpp  Color.cpp  Connection.cpp  Function.cpp  JSON.cpp  Object.cpp  PropertyContainer.cpp  ScopedConnection.cpp  Tokenizer.cpp  Variant.cpp  cppexpose.cpp
source/cppexpose/source/base/: JSONReader.cpp  Serializer.cpp  SerializerJSON.cpp  Tokenizer.cpp  string_helpers.cpp
source/cppexpose/source/expose/: AbstractProperty.cpp  AbstractVar.cpp  Array.cpp  Object.cpp  PropertyContainer.cpp  Variant.cpp
source/cppexpose/source/function/: AbstractFunction.cpp  Function.cpp
source/cppexpose/source/json/: JSON.cpp
source/cppexpose/source/plugin/: AbstractComponent.cpp  ComponentManager.cpp  ComponentRegistry.cpp  Example.cpp  PluginLibrary.cpp
source/cppexpose/source/reflection/: AbstractProperty.cpp  AbstractProperty2.cpp  Member.cpp  Method.cpp  Named.cpp  Object.cpp  PropertyGroup.cpp  Variant.cpp
source/cppexpose/source/scripting/: AbstractScriptBackend.cpp  DuktapeObjectWrapper.cpp  DuktapeObjectWrapper.h  DuktapeScriptBackend.cpp  DuktapeScriptBackend.h  DuktapeScriptFunction.cpp  DuktapeScriptFunction.h  ScriptContext.cpp
source/cppexpose/source/signal/: AbstractSignal.cpp  Connection.cpp  ScopedConnection.cpp
source/cppexpose/source/type/: AbstractBaseType.cpp  AbstractType.cpp  AbstractTyped.cpp  AbstractValue.cpp  Converter.cpp  IType.cpp  MetaType.cpp  NullType.cpp  ObjectType.cpp  Type.cpp  TypeNull.cpp  Typed.cpp
source/cppexpose/source/typed/: AbstractTyped.cpp  TypeInterface.cpp
source/cppexpose/source/value/: AbstractValue.cpp  AbstractValueContainer.cpp
source/cppexpose/source/variant/: Variant.cpp  Variant2.cpp
source/examples/: CMakeLists.txt
source/examples/example-plugins/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  plugin.cpp
source/examples/parser/: CMakeLists.txt  main.cpp
source/examples/plugin/: Addition.cpp  Addition.h  BinaryOperator.cpp  BinaryOperator.h  BinaryOperatorComponent.h  BottlesOfBeer.cpp  BottlesOfBeer.h  CMakeLists.txt  Multiplication.cpp  Multiplication.h  main.cpp
source/examples/plugins/: BottlesOfBeer.cpp  BottlesOfBeer.h  CMakeLists.txt  main.cpp
source/examples/property/: CMakeLists.txt  Mood.h  MyObject.cpp  MyObject.h  PropertyExtensions.h  main.cpp
source/examples/scripting/: CMakeLists.txt  MyObject.cpp  MyObject.h  TreeNode.cpp  TreeNode.h  main.cpp
source/examples/scripting/linenoise-ng/: linenoise.cpp
source/examples/type/: CMakeLists.txt  main.cpp
source/examples/types/: CMakeLists.txt  main.cpp
source/examples/xml/: CMakeLists.txt  main.cpp
source/tests/cppexpose-test/: CMakeLists.txt  Color_test.cpp  DirectValueInstantiationTest.cpp  DirectValueTest.cpp  MyObject.h  PropertyInstantiationTest.cpp  PropertyTest.cpp  StoredValueInstantiationTest.cpp  StoredValueTest.cpp  VariantTest.cpp  generateInstanciationTests.py  instanciationTestsFiles.txt  main.cpp  variantTest.cpp
source/tests/cppexpose-test/propertyInstanciationTests/: PropertyInstanciationBoolArray_test.cpp  PropertyInstanciationBool_test.cpp  PropertyInstanciationDoubleArray_test.cpp  PropertyInstanciationDouble_test.cpp  PropertyInstanciationFloatArray_test.cpp  PropertyInstanciationFloat_test.cpp  PropertyInstanciationInt16_TArray_test.cpp  PropertyInstanciationInt16_T_test.cpp  PropertyInstanciationInt32_TArray_test.cpp  PropertyInstanciationInt32_T_test.cpp  PropertyInstanciationInt64_TArray_test.cpp  PropertyInstanciationInt64_T_test.cpp  PropertyInstanciationInt8_TArray_test.cpp  PropertyInstanciationInt8_T_test.cpp  PropertyInstanciationStringArray_test.cpp  PropertyInstanciationString_test.cpp  PropertyInstanciationUint16_TArray_test.cpp  PropertyInstanciationUint16_T_test.cpp  PropertyInstanciationUint32_TArray_test.cpp  PropertyInstanciationUint32_T_test.cpp  PropertyInstanciationUint64_TArray_test.cpp  PropertyInstanciationUint64_T_test.cpp  PropertyInstanciationUint8_TArray_test.cpp  PropertyInstanciationUint8_T_test.cpp  PropertyInstanciationVariantArray_test.cpp  PropertyInstanciationVariant_test.cpp
(+372 files in other folders)
